# abot

./: .clang-format  .gitignore  README.md
cad/: README.md
cad/CHASSIS/: CASTER_WHEEL_BALL.SLDPRT  CASTER_WHEEL_CASE.SLDPRT  LOWER_PLATE.SLDPRT  UPPER_PLATE.SLDPRT  WHEEL_D65_W26.SLDPRT
cad/ELECTRONICS/AMPERKA/: TROYKA_PAD_X2_DUMMY.SLDPRT
cad/ELECTRONICS/AMPERKA/TROYKA_AMPLIFIER_D/: TROYKA_AMPLIFIER_D.SLDASM  TROYKA_AMPLIFIER_D.SLDPRT  TROYKA_AMPLIFIER_D_1-copper.sldprt  TROYKA_AMPLIFIER_D_1-soldermask_1.sldprt  TROYKA_AMPLIFIER_D_14420348.f3d .sldprt  TROYKA_AMPLIFIER_D_16-copper.sldprt  TROYKA_AMPLIFIER_D_16-soldermask_1.sldprt  TROYKA_AMPLIFIER_D_Board.sldprt  TROYKA_AMPLIFIER_D_Body.sldprt  TROYKA_AMPLIFIER_D_C0603.sldprt  TROYKA_AMPLIFIER_D_J0402.sldprt  TROYKA_AMPLIFIER_D_Model (1).sldprt  TROYKA_AMPLIFIER_D_Model.sldprt  TROYKA_AMPLIFIER_D_Pins.sldprt  (+14 more)
cad/ELECTRONICS/BATTERY_HOLDERS/: COMMON_18650_BATTERY_HOLDER_DUMMY.SLDPRT
cad/ELECTRONICS/RPI/: ~$RPI_4DUMMY.SLDPRT
cad/METALWARE/: STANDOFF_M3_40.SLDPRT  STANDOFF_M3_50.SLDPRT  STANDOFF_M3_60.SLDPRT
cad/MOTORS/: 1.SLDPRT  10.SLDPRT  11.SLDPRT  12.SLDPRT  13.SLDPRT  14.SLDPRT  15.SLDPRT  2.SLDPRT  3.SLDPRT  4.SLDPRT  5.SLDPRT  6.SLDPRT  7.SLDPRT  8.SLDPRT  9.SLDPRT  TT_ANGLE_MOTOR.SLDASM  TT_ANGLE_MOTOR_PART.SLDPRT  TT_ANGLE_MOTOR_WITH_ENCODER.SLDASM  TT_ANGLE_MOTOR_WITH_ENCODER.SLDPRT  ~$13.SLDPRT
cad/PARTS_PRINT/: PRINT_PLATE_0.SLDPRT  SHARP_IR_HOLDER.SLDPRT
cad/PARTS_PRINT/COMMON_PARTS/: PRINT_PLATE_0.SLDPRT  PRINT_PLATE_1.SLDPRT
cad/PARTS_PRINT/SOUND_PARTS/: PRINT_MIC_CAP.SLDPRT  PRINT_PLATE_SOUND_0.SLDPRT  PRINT_SOUND_CARD_CAP.SLDPRT
cad/SCREWS/: SCREWS_ASSM_1.SLDASM  SCREWS_ASSM_2.SLDASM  SCREWS_ASSM_3.SLDASM  SCREWS_ASSM_4.SLDASM  SCREWS_ASSM_5.SLDASM
cad/SCREWS/M2/: DIN_125_M2_WASHER_NORMAL.SLDPRT  DIN_127_M2_SPRING_WASHER.SLDPRT  DIN_912_M2_6H.SLDPRT  DIN_934_M2_HEX_NUT.SLDPRT
cad/SCREWS/M2.5/: DIN_125_M2.5_WASHER_NORMAL.SLDPRT  DIN_127_M2.5_SPRING_WASHER.SLDPRT  DIN_912_M2.5_10H.SLDPRT  DIN_912_M2.5_25H.SLDPRT  DIN_934_M2.5_HEX_NUT.SLDPRT
cad/SCREWS/M3/: DIN_125_M3_WASHER_NORMAL.SLDPRT  DIN_127_M3_SPRING_WASHER.SLDPRT  DIN_912_M3_16H.SLDPRT  DIN_934_M3_HEX_NUT.SLDPRT
cad/SENSORS/LIDAR/: 1.SLDPRT  10.SLDPRT  11.SLDPRT  12.SLDPRT  13.SLDPRT  14.SLDPRT  15.SLDPRT  16.SLDPRT  17.SLDPRT  18.SLDPRT  19.SLDPRT  2.SLDPRT  20.SLDPRT  21.SLDPRT  22.SLDPRT  3.SLDPRT  4.SLDPRT  5.SLDPRT  6.SLDPRT  7.SLDPRT  8.SLDPRT  9.SLDPRT
cad/SENSORS/SHARP_IR/: GP2Y0A41SK0F.SLDPRT  GP2Y0A41SK0F_AXIS_FRAME.SLDASM  GP2Y0A41SK0F_AXIS_FRAME.SLDPRT
cad/SOUND_DEVICES/: CREATIVE_SOUND_BLASTER_PLAY_3.SLDPRT  TABLETOP_MICROPHONE_ATR4697.SLDPRT  VECO_32KC08_1.SLDPRT
ros/src/abot_base/: CMakeLists.txt  package.xml
ros/src/abot_base/launch/: abot_base.launch
ros/src/abot_base/src/: abot_base.cpp  abot_hardware_interface.h
ros/src/abot_control/: CMakeLists.txt  package.xml
ros/src/abot_control/config/: abot_controllers.yaml
ros/src/abot_control/launch/: abot_control.launch
ros/src/abot_description/: CMakeLists.txt  package.xml
ros/src/abot_description/launch/: bringup.launch  display_model.launch  display_movement.launch  display_navigation.launch  display_slam.launch
ros/src/abot_description/meshes/: README.md  abot_right_wheel.STL
ros/src/abot_description/meshes/v2/: abot_caster_wheel.STL  abot_left_wheel.STL
ros/src/abot_description/rviz/: abot_model.rviz  abot_movement.rviz  abot_navigation.rviz  abot_slam.rviz
ros/src/abot_description/urdf/: README.md  abot.xacro  abot_caster_wheel.xacro  abot_right_wheel.xacro
ros/src/abot_description/urdf/v1/: abot_matherials.xacro  abot_sensors.xacro
ros/src/abot_description/urdf/v2/: abot_left_wheel.xacro  abot_sensors.xacro
ros/src/abot_driver/: CMakeLists.txt  package.xml
ros/src/abot_driver/launch/: abot_drivers.launch  abot_lidar.launch  abot_pid.launch
ros/src/abot_driver/src/: dc_motor_wiring_pi.h  dc_motor_wiring_pi.hpp  dc_motors.cpp  encoder_wiring_pi.h  encoder_wiring_pi.hpp  encoders.cpp
ros/src/abot_navigation/: CMakeLists.txt  package.xml
ros/src/abot_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
ros/src/abot_navigation/launch/: abot_navigation.launch  amcl.launch  move_base.launch
ros/src/abot_slam/: CMakeLists.txt  package.xml
ros/src/abot_slam/config/: gmapping_params.yaml
ros/src/abot_slam/launch/: abot_slam.launch
ros/src/abot_slam/maps/: map.pgm  map.xcf  map.yaml  map2_fake.pgm  map2_fake.xcf  map2_fake.yaml  map2_original.pgm  map2_original.xcf  map2_original.yaml
ros/src/abot_sound/abot_sound/: CMakeLists.txt  package.xml
ros/src/abot_sound/abot_speech_command/: CMakeLists.txt  package.xml
ros/src/abot_sound/abot_speech_command/launch/: abot_sound.launch  abot_speech_command.launch
ros/src/abot_sound/abot_speech_command/src/: vc_get_battery_state.cpp  vc_get_battery_state.h  vc_get_system_time.cpp  vc_get_system_time.h  vc_set_navigation_goal.cpp  vc_set_navigation_goal.h
ros/src/abot_sound/abot_speech_command/src/test/: test_command_executor.cpp
ros/src/abot_sound/abot_speech_to_text/: CMakeLists.txt  package.xml
ros/src/abot_sound/abot_speech_to_text/config/: abot_dictionary.dic  abot_dictionary.dic.accent  abot_dictionary.txt  abot_gram.fsg  abot_gram.gram  abot_kwslist.kwslist
ros/src/abot_sound/abot_speech_to_text/config/test/: test_dictionary.dic  test_dictionary.dic.accent  test_dictionary.txt  test_gram.gram
ros/src/abot_sound/abot_speech_to_text/launch/: abot_speech_to_text.launch
ros/src/abot_sound/abot_speech_to_text/scripts/: asr_control.py  kws_control.py
ros/src/abot_sound/abot_text_to_speech/: CMakeLists.txt  package.xml
ros/src/abot_sound/abot_text_to_speech/launch/: abot_text_to_speech.launch  aws_polly_tts.launch  festvox_tts.launch  rhvoice_tts.launch
ros/src/abot_sound/abot_text_to_speech/scripts/: aws_polly_tts.py  festvox_tts.py  rhvoice_tts.py
ros/src/abot_teleop/: CMakeLists.txt  package.xml
ros/src/abot_teleop/launch/: abot_teleop.launch
ros/src/abot_teleop/src/: abot_teleop.cpp  abot_teleop.h  abot_teleop.hpp
(+19 files in other folders)
