<?xml version="1.0"?>
    <package format="2">
    <name>abot_base</name>
    <version>0.0.0</version>
    <description>The abot_base package</description>

    <maintainer email="gabbapeople@amperka.ru">gabbapeople</maintainer>
    <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

    <build_depend>controller_manager</build_depend>
    <build_depend>hardware_interface</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>diff_drive_controller</build_depend>

    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>hardware_interface</build_export_depend>
	<build_export_depend>trajectory_msgs</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>diff_drive_controller</build_export_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>

	<export>
	</export>
</package>
