<?xml version="1.0"?>
    <package format="2">
    <name>abot_description</name>
    <version>0.0.0</version>
    <description>The abot_description package</description>

    <maintainer email="gabbapeople@amperka.ru">gabbapeople</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rviz</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>

    <build_export_depend>rviz</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>xacro</build_export_depend>

    <exec_depend>rviz</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
    </export>
</package>