<?xml version="1.0"?>
	<package format="3">
	<name>abot_speech_command</name>
	<version>0.0.0</version>
	<description>The abot_speech_command package</description>

	<maintainer email="gabbapeople@amperka.ru">gabbapeople</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>move_base_msgs</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>actionlib</build_export_depend>
	<build_export_depend>move_base_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>move_base_msgs</exec_depend>

	<export>
	</export>
</package>
