<?xml version="1.0"?>
	<package format="3">
	<name>abot_text_to_speech</name>
	<version>0.0.0</version>
	<description>The abot_text_to_speech package</description>

	<maintainer email="gabbapeople@amperka.ru">gabbapeople</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sound_play</build_depend>
	<build_depend>audio_common_msgs</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>sound_play</build_export_depend>
	<build_export_depend>audio_common_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sound_play</exec_depend>
	<exec_depend>audio_common_msgs</exec_depend>

	<exec_depend>python3-boto3</exec_depend>

	<export>
	</export>
</package>
